new endpoints to facilitate simpler invitee logic
